新增: 可选择是否启用etil-flags